--- a/package.json
+++ b/package.json
@@ -92,8 +92,8 @@
     "scratch-audio": "github:TurboWarp/scratch-audio#develop",
     "scratch-blocks": "github:TurboWarp/scratch-blocks#develop-builds",
     "scratch-paint": "github:TurboWarp/scratch-paint#develop",
-    "scratch-render": "github:02engine/scratch-render#develop",
-    "scratch-vm": "github:02engine/scratch-vm#develop",
+    "scratch-render": "github:02engine/scratch-render#main",
+    "scratch-vm": "github:02engine/scratch-vm#main",
     "style-loader": "^0.23.0",
     "text-encoding": "0.7.0",
     "to-style": "1.3.3",
