--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@turbowarp/jszip": "^3.11.1",
     "@turbowarp/nanolog": "^0.2.0",
     "@turbowarp/scratch-l10n": "^3.1001.0-202401241456-994097a5",
-    "@turbowarp/scratch-storage": "^0.0.202505311821",
+    "@turbowarp/scratch-storage": "git+https://github.com/02engine/scratch-storage.git#main",
     "@turbowarp/scratch-svg-renderer": "^1.0.0-202312242305-12c360b",
     "@turbowarp/startaudiocontext": "^1.0.0",
     "arraybuffer-loader": "^1.0.6",
@@ -89,11 +89,11 @@
     "react-virtualized": "9.20.1",
     "redux": "3.7.2",
     "redux-throttle": "0.1.1",
-    "scratch-audio": "github:TurboWarp/scratch-audio#develop",
-    "scratch-blocks": "github:TurboWarp/scratch-blocks#develop-builds",
-    "scratch-paint": "github:TurboWarp/scratch-paint#develop",
-    "scratch-render": "github:TurboWarp/scratch-render#develop",
-    "scratch-vm": "github:TurboWarp/scratch-vm#develop",
+    "scratch-audio": "git+https://github.com/02engine/scratch-audio.git#main",
+    "scratch-blocks": "git+https://github.com/02engine/scratch-blocks.git#main",
+    "scratch-paint": "git+https://github.com/02engine/scratch-paint.git#main",
+    "scratch-render": "git+https://github.com/02engine/scratch-render.git#main",
+    "scratch-vm": "git+https://github.com/02engine/scratch-vm.git#main",
     "style-loader": "^0.23.0",
     "text-encoding": "0.7.0",
     "to-style": "1.3.3",
