--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,8 @@ name: Build
 
 on:
   push:
-  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
@@ -44,7 +45,7 @@ jobs:
     - name: Deploy 💥
       uses: JamesIves/github-pages-deploy-action@v2
       with:
-        folder: build # 构建输出的文件夹（根据你的项目配置调整，例如可能是 build 或 public）
-        branch: gh-pages # 部署到的分支
+        folder: build
+        branch: gh-pages
 
 
