--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,4 +42,9 @@ jobs:
         path: files.zip
         retention-days: 7
 
+    - name: Deploy 💥
+      uses: JamesIves/github-pages-deploy-action@v4
+      with:
+        folder: build
+        branch: gh-pages
 
