--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Build and Deploy to GitHub Pages
 
 on:
   push:
@@ -6,44 +6,46 @@ on:
       - main
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code 🛎️
+        uses: actions/checkout@v4
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-        cache: 'npm'
+      - name: Setup Node.js ⚙️
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
 
-    - name: Skip Scripts Install 
-      run: npm i --skip-scripts
+      - name: Skip Scripts Install 📦
+        run: npm i --skip-scripts
 
-    - name: Install cross-fetch
-      run: npm i cross-fetch
+      - name: Install cross-fetch 📦
+        run: npm i cross-fetch
 
-    - name: Install dependencies
-      run: npm i
+      - name: Install dependencies 📦
+        run: npm i
 
-      
-    - name: Build
-      run: npm run build
+      - name: Build 🏗️
+        run: npm run build
 
-    - name: Zip dist
-      run: zip -r files.zip ./
+      - name: Setup Pages 📄
+        uses: actions/configure-pages@v5
 
-    - name: Setup Pages
-      uses: actions/configure-pages@v5
+      - name: Upload artifact 📤
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./build
 
-    - name: Upload artifact
-      uses: actions/upload-artifact@v4
-      with:
-        path: ./build
-
-    - name: Deploy 💥
-      id: deployment
-      uses: actions/deploy-pages@v4
-
+      - name: Deploy to GitHub Pages 🚀
+        id: deployment
+        uses: actions/deploy-pages@v4
