--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Install dependencies 📦
         run: npm i  --loglevel=info
 
+      - name: Prepublish 🔧
+        run: npm run prepublishOnly
+
       - name: Build 🏗️
         run: npm run build
 
