--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,14 +36,11 @@ jobs:
       - name: Build 🏗️
         run: npm run build
 
-      - name: Zip build folder 📦
-        run: zip -r build.zip ./
-
       - name: Upload build artifact 📤
         uses: actions/upload-artifact@v4
         with:
           name: build-artifact
-          path: ./build.zip
+          path: ./
 
       - name: Deploy to cf-page branch 🚀
         uses: peaceiris/actions-gh-pages@v4
